@@ -1,6 +1,7 @@
 
 ChangeLog
  [ + added, - removed, * changed ]
+ + 05Sep2014 Added instrumentation for mpi_request_get_status/fortran
  * 02Sep2014 Fixed bug in the buffers management. Need to forward to the
  SEEK_END of the file before writing to disk, due to the interactions between
  the normal tracing buffer and the cache.
